<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/nav_bea_member"
        android:icon="@drawable/ic_member"
        android:title="@string/nav_bea_member" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_nav_account"
        android:title="@string/nav_account" />
</menu>
