<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/headerBackground"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            app:cardCornerRadius="24dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#128269;"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/hint_search"
                    android:textColor="@color/gray_medium"
                    android:textSize="@dimen/text_medium" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textDelivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/delivery_location"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            app:drawableTint="@color/white"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/bannerCard"
            android:layout_width="0dp"
            android:layout_height="@dimen/banner_height"
            android:layout_margin="@dimen/margin_medium"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintTop_toBottomOf="@id/headerBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary">

                <TextView
                    android:id="@+id/textBannerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="LANDERS"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_xlarge"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textBannerDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="More than 10,000 NEW Marketplace items, only at Landers.ph"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintTop_toBottomOf="@id/textBannerTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textBannerEmoji" />

                <Button
                    android:id="@+id/buttonShopNow"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/shop_now"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintTop_toBottomOf="@id/textBannerDesc"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textBannerEmoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:text="&#128230;&#127911;&#129524;"
                    android:textSize="60sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textFeaturedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/featured_products"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            android:textSize="@dimen/text_xlarge"
            app:layout_constraintTop_toBottomOf="@id/bannerCard"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFeatured"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:clipToPadding="false"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/textFeaturedTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textDealsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/deals"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            android:textSize="@dimen/text_xlarge"
            app:layout_constraintTop_toBottomOf="@id/recyclerFeatured"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerDeals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:clipToPadding="false"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/textDealsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_large" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
