<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding_large">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&#10005;"
        android:textSize="20sp"
        android:textColor="@color/gray_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/tabsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/textClose"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd">

        <TextView
            android:id="@+id/tabSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_large"
            android:textColor="@color/gray_medium"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_small" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tabLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/text_large"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:paddingBottom="@dimen/padding_small" />

            <View
                android:layout_width="48dp"
                android:layout_height="2dp"
                android:background="@color/primary" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_border"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:textSize="@dimen/text_medium"
        app:layout_constraintTop_toBottomOf="@id/tabsContainer"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:textSize="@dimen/text_medium"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/login"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_medium"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

    <TextView
        android:id="@+id/textOrLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/or_login_with"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/gray_medium"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textForgotPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

    <LinearLayout
        android:id="@+id/socialButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textOrLogin"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd">

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="Facebook"
            android:textColor="#1877F2"
            android:textSize="@dimen/text_medium"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="@dimen/margin_small" />

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="Google"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_medium"
            android:backgroundTint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="Don't have an account? Sign Up"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/socialButtons"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>
